--- a/my-lib/build.gradle
+++ b/my-lib/build.gradle
@@ -9,6 +9,17 @@ eclipse {
 	}
 }
 
+sourceSets{
+	description  = "生成提供工具方法"
+    main{
+        java{srcDir "src/main/java"}
+        resources{srcDir "src/main/resources"}
+    }
+    test{
+        java{srcDir "src/test/java"}
+        resources{srcDir "src/test/resources"}
+    }
+}
 
 dependencies {
 
