--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,5 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Tue Aug 25 12:51:22 CST 2015
-build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;hibernate4;me-design;me-test;me-web;my-lib;product;
+#Wed Aug 26 11:15:25 CST 2015
+build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;me-design;me-test;my-lib;
 org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
