全部初始化 Signed-off-by: 仰望星空 <starsxlk@gmail.com>

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>gradle2me</name>
-	<comment></comment>
+	<comment>对xxx的 学习讨论。。。</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -30,7 +30,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1440482262430</id>
+			<id>1444721268294</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -39,14 +39,6 @@
 					<matcher>
 						<id>org.eclipse.ui.ide.multiFilter</id>
 						<arguments>1.0-projectRelativePath-equals-true-false-product</arguments>
-					</matcher>
-					<matcher>
-						<id>org.eclipse.ui.ide.multiFilter</id>
-						<arguments>1.0-projectRelativePath-equals-true-false-me-test</arguments>
-					</matcher>
-					<matcher>
-						<id>org.eclipse.ui.ide.multiFilter</id>
-						<arguments>1.0-projectRelativePath-equals-true-false-me-web</arguments>
 					</matcher>
 					<matcher>
 						<id>org.eclipse.ui.ide.multiFilter</id>
