--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.import.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.import.prefs
@@ -1,5 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleImportPreferences
-#Tue Aug 25 13:57:38 CST 2015
+#Tue Oct 13 15:27:43 CST 2015
 addResourceFilters=true
 afterTasks=afterEclipseImport;
 beforeTasks=cleanEclipse;eclipse;
@@ -7,4 +7,4 @@ enableAfterTasks=true
 enableBeforeTasks=true
 enableDSLD=false
 enableDependendencyManagement=true
-projects=;hibernate4;me-design;me-test;me-web;my-lib;product;
+projects=;hibernate4;me-design;my-lib;product;
