--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,5 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Wed Aug 26 11:15:25 CST 2015
-build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;me-design;me-test;my-lib;
+#Tue Oct 13 15:27:41 CST 2015
+build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;hibernate4;me-design;my-lib;product;
 org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
