--- a/dependency.gradle
+++ b/dependency.gradle
@@ -1,6 +1,6 @@
 ext.versions = [
-    spring    : "4.1.6.RELEASE",
-    struts    : "2.3.16.3",
+    spring    : "4.1.7.RELEASE",
+    struts    : "2.3.24",
     hibernate : "4.3.10.Final",
     security  : "3.2.5.RELEASE",
     jackson   : "2.4.3",
@@ -8,43 +8,77 @@ ext.versions = [
     slf4j     : "1.7.7",
     httpclient: "4.3.1",
     lucene    : "4.10.1",
+    jackson   : "2.5.4",
+    shiro     : "1.2.3",
+    
 ]
 
 ext.libraries = [
 
-    "ant": "org.apache.ant:ant:1.8.4",
-    "antlr": "antlr:antlr:2.7.7",
-    "logging-api": "commons-logging-api:commons-logging-api:1.1",
-    "beanutils": "commons-beanutils:commons-beanutils:1.9.2",
-    "betwixt": "commons-betwixt:commons-betwixt:0.8",
-    "codec": "commons-codec:commons-codec:1.3",
-    "collections": "commons-collections:commons-collections:3.2.1",
-    "digester": "commons-digester:commons-digester:2.1",
-    "fileupload": "commons-fileupload:commons-fileupload:1.2.2",
-    "io": "commons-io:commons-io:2.0.1",
-    "lang": "commons-lang:commons-lang:2.1",
-    "pool2": "org.apache.commons:commons-pool2:2.2",
-    "log4j": "log4j:log4j:1.2.17",
-        
-    //  java ee 7
-    // "javax:javaee-api:7.0",
+    "shiro-core"    : "org.apache.shiro:shiro-core:${versions.shiro}",
+    "shiro-web"     : "org.apache.shiro:shiro-web:${versions.shiro}",
+    "shiro-ehcache" : "org.apache.shiro:shiro-ehcache:${versions.shiro}",
+    "shiro-quartz"  : "org.apache.shiro:shiro-quartz:${versions.shiro}",
+    "shiro-spring"  : "org.apache.shiro:shiro-spring:${versions.shiro}",
+    "ant"           : "org.apache.ant:ant:1.8.4",
     
+    "antlr"         : "antlr:antlr:2.7.7",
+    
+    // aspectj相关jar包
+    "aspectjrt"         : "org.aspectj:aspectjrt:1.8.5",
+    "aspectjweaver"     : "org.aspectj:aspectjweaver:1.8.5",
+    
+   // "commons-logging-api": "commons-logging-api:commons-logging-api:1.1",
+    "commons-beanutils"  : "commons-beanutils:commons-beanutils:1.8.0",
+    "commons-betwixt"    : "commons-betwixt:commons-betwixt:0.8",
+    "commons-codec"      : "commons-codec:commons-codec:1.3",
+    "commons-collections": "commons-collections:commons-collections:3.2.1",
+    "commons-digester"   : "commons-digester:commons-digester:2.1",
+    "commons-fileupload" : "commons-fileupload:commons-fileupload:1.2.2",
+    "commons-io"         : "commons-io:commons-io:2.0.1",
+    "commons-logging"    : "commons-logging:commons-logging:1.1.3",
+    "commons-lang"       : "commons-lang:commons-lang:2.1",
+    "commons-pool2"      : "org.apache.commons:commons-pool2:2.2",
+    "commons-dbutils"      : "commons-dbutils:commons-dbutils:1.5",
+    "commons-httpclient"      : "commons-httpclient:commons-httpclient:3.1",
+    
+    "log4j"          : "log4j:log4j:1.2.17",
+    "slf4j-log4j"	 : "org.slf4j:slf4j-log4j12:1.7.5",
+    "logback-classic": "ch.qos.logback:logback-classic:1.1.2",
+    
+    "zip4j"          : "net.lingala.zip4j:zip4j:1.3.2",
+    "dom4j"          : "dom4j:dom4j:1.6.1",
+
+    "servlet-api" : "javax.servlet:javax.servlet-api:3.0.1",
+    "jsp-api"     : "javax.servlet:jsp-api:2.0",
+    "jstl"        : "javax.servlet:jstl:1.2",
+    "mail"        : "javax.mail:mail:1.4.7",
+    "jsf-api"     : "javax.faces:jsf-api:1.2_04",
+    "jsf-impl"    : "javax.faces:jsf-impl:1.2_04",
+
     //  springframework 
+    "spring-core"   : "org.springframework:spring-aop:${versions.spring}",
     "spring-aop"    : "org.springframework:spring-aop:${versions.spring}",
     "spring-beans"  : "org.springframework:spring-beans:${versions.spring}",
     "spring-aspects": "org.springframework:spring-aspects:${versions.spring}",
     "spring-context": "org.springframework:spring-context:${versions.spring}",
     "spring-web"    : "org.springframework:spring-web:${versions.spring}",
+    "spring-webmvc" : "org.springframework:spring-webmvc:${versions.spring}",
     "spring-orm"    : "org.springframework:spring-orm:${versions.spring}",
     "spring-tx"     : "org.springframework:spring-tx:${versions.spring}",
     "spring-jdbc"   : "org.springframework:spring-jdbc:${versions.spring}",
     "spring-test"   : "org.springframework:spring-test:${versions.spring}",
+    "spring-expression"     : "org.springframework:spring-expression:${versions.spring}",
+    "spring-context-support": "org.springframework:spring-context-support:${versions.spring}",
+    
+    "spring-data-mongodb"   : "org.springframework.data:spring-data-mongodb:1.8.0.RELEASE",
+    "spring-data-redis"     : "org.springframework.data:spring-data-redis:1.6.0.RELEASE",
         
     //  struts2
-    "struts2-spring-plugin": "org.apache.struts:struts2-spring-plugin:${versions.struts}",
+    "struts2-core"             : "org.apache.struts:struts2-core:${versions.struts}",
     "struts2-convention-plugin": "org.apache.struts:struts2-convention-plugin:${versions.struts}",
-    "struts2-json-plugin": "org.apache.struts:struts2-json-plugin:${versions.struts}",
-        
+    "struts2-spring-plugin"    : "org.apache.struts:struts2-spring-plugin:${versions.struts}",
+    "struts2-json-plugin"      : "org.apache.struts:struts2-json-plugin:${versions.struts}",
     
     //  hibernate
     "hibernate-core"         : "org.hibernate:hibernate-core:${versions.hibernate}",
@@ -53,36 +87,40 @@ ext.libraries = [
     
     
     //  mysql connector
-    "mysql": "mysql:mysql-connector-java:5.1.+",
+    "mysql"       : "mysql:mysql-connector-java:5.1.+",
+    "ojdbc14"     : "com.oracle:ojdbc14:10.2.0.1.0",
+    "jedis"       : "redis.clients:jedis:2.7.3",
+    
     // data source
     "commons-dbcp": "commons-dbcp:commons-dbcp:1.4",
-    "proxool": "com.cloudhopper.proxool:proxool:0.9.1",
-    
-    //  jstl
-    "jstl": "jstl:jstl:1.2",
-    "standard": "taglibs:standard:1.1.2",
-    
-    "json": "org.json:json:20140107",
-    "protobuf": "com.google.protobuf:com.google.protobuf:2.4.1",
-    "quartz": "org.quartz-scheduler:quartz:2.1.7",
+    "proxool"     : "com.cloudhopper.proxool:proxool:0.9.1",
+    "druid"       : "com.alibaba:druid:0.2.23",
+    "c3p0"        : "c3p0:c3p0:0.9.1.2",
+    "ehcache-core": "net.sf.ehcache:ehcache-core:2.6.6",
+    "ehcache"     : "net.sf.ehcache:ehcache:2.8.3",
+   
+    "httpclient"     : "org.apache.httpcomponents:httpclient:4.3.4",
+	"jackson"     : "com.fasterxml.jackson.core:jackson-databind:2.5.4",
+    "json"        : "org.json:json:20140107",
+    "protobuf"    : "com.google.protobuf:com.google.protobuf:2.4.1",
+    "quartz-scheduler"      : "org.quartz-scheduler:quartz:2.1.7",
+    "quartz"      : "quartz:quartz:1.5.2",
+    "velocity"      : "velocity:velocity:1.5",
 
-    "junit": "junit:junit:4.11",
-    "servlet-api": "javax.servlet:javax.servlet-api:3.0.1",
-    "jsp-api": "javax.servlet:jsp-api:2.0",
-    "jstl": "javax.servlet:jstl:1.2",
-    "standard": "taglibs:standard:1.1.2",
-        
-    "ehcache-core": "net.sf.ehcache:ehcache-core:2.5.1",
-    "ehcache": "net.sf.ehcache:ehcache:2.8.3",
+    "junit"       : "junit:junit:4.11",
+    "standard"    : "taglibs:standard:1.1.2",
+    
+    
+ 
 
     // Other
-    "guava": "com.google.guava:guava:15.0",
-    "htmlparser": "org.htmlparser:htmlparser:2.1",
-    "jsoup": "org.jsoup:jsoup:1.7.3",
-    "joda-time": "joda-time:joda-time:2.3",
-    "xstream": "com.thoughtworks.xstream:xstream:1.4.5",
+    "guava"        : "com.google.guava:guava:15.0",
+    "htmlparser"   : "org.htmlparser:htmlparser:2.1",
+    "jsoup"        : "org.jsoup:jsoup:1.7.3",
+    "joda-time"    : "joda-time:joda-time:2.3",
+    "xstream"      : "com.thoughtworks.xstream:xstream:1.4.5",
     "thumbnailator": "net.coobird:thumbnailator:0.4.7",
-    "snakeyaml": "org.yaml:snakeyaml:1.14",
-    "assertj": "org.assertj:assertj-core:1.6.0"
+    "snakeyaml"    : "org.yaml:snakeyaml:1.14",
+    "assertj"      : "org.assertj:assertj-core:1.6.0"
 
 ]
