--- a/hibernate4/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/hibernate4/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,3 +1,4 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Wed Aug 26 11:15:25 CST 2015
+#Tue Oct 13 15:24:44 CST 2015
 org.springsource.ide.eclipse.gradle.linkedresources=
+org.springsource.ide.eclipse.gradle.rootprojectloc=..
