--- a/my-lib/.project
+++ b/my-lib/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>my-lib</name>
-	<comment></comment>
+	<comment>生成提供工具方法</comment>
 	<projects>
 	</projects>
 	<buildSpec>
