--- a/settings.gradle
+++ b/settings.gradle
@@ -3,9 +3,7 @@ rootProject.name = 'gradle2me'
 
 include 'my-lib'
 
-//include 'product'
-//include 'me-web'
-//include 'hibernate4'
+include 'product'
+include 'hibernate4'
 
-include 'me-test'
 include 'me-design'
